--- a/D002/button-component-master/index.html
+++ b/D002/button-component-master/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
 <body>
@@ -15,11 +17,64 @@
   </div>
 
   <section>
-    <h1>Buttons</h1>
+    <header>
+      <h1>Buttons</h1>
+    </header>
 
-    <p class="default">
-      Default
-    </p>
+    <div>
+      <p class="default">
+        <span>Default</span>
+      </p>
+      <p class="default" id="hoverr">
+        <span>Default</span>
+      </p>
+
+      <p class="default" id="outline">
+        <span>Default</span>
+      </p>
+      <p class="default" id="outlinehover">
+        <span>Default</span>
+      </p>
+
+      <p class="default" id="text">
+        <span>Default</span>
+      </p>
+      <p class="default" id="texthover">
+        <span>Default</span>
+      </p>
+
+      <p class="default" id="colorwhite">
+        <span>Default</span>
+      </p>
+
+      <p class="default" id="colorgray">
+        <span>Default</span>
+      </p>
+      <p class="default" id="colorgrayhover">
+        <span>Default</span>
+      </p>
+
+      <p class="default" id="shoppingcar">
+        <span class="material-symbols-outlined" id="sc">
+          shopping_cart_checkout
+        </span><span id="car">Default</span>
+      </p>
+      <p class="default" id="shoppingcarhover">
+        <span id="carhover">Default</span><span class="material-symbols-outlined" id="sch">
+          shopping_cart_checkout
+        </span>
+      </p>
+
+      <p class="default" id="little">
+        <span>Default</span>
+      </p>
+      <p class="default" id="medium">
+        <span>Default</span>
+      </p>]
+      <p class="default" id="large">
+        <span id="slarge">Default</span>
+      </p>
+    </div>
   </section>
 
 </body>
