before use position absolute

--- a/D002/index.html
+++ b/D002/index.html
@@ -29,6 +29,15 @@
 
     <main>
         <h1>Buttons</h1>
+
+        <div>
+            <p>
+                &lt;Button /&gt;
+            </p>
+            <p class="buttondefault">
+                <span class="spanbutton">Default</span>
+            </p>
+        </div>
     </main>
 </body>
 
