--- a/D002/index.html
+++ b/D002/index.html
@@ -31,10 +31,20 @@
         <h1>Buttons</h1>
 
         <div>
-            <p>
+            <!--Button Padrão-->
+            <p class="textdefault">
                 &lt;Button /&gt;
             </p>
             <p class="buttondefault">
+                <span class="spanbutton">Default</span>
+            </p>
+        </div>
+        <div class="divhoverdefault">
+            <!--Button com hover Padrão-->
+            <p class="textdefault" id="texthover1">
+                &:hover , &:focus
+            </p>
+            <p class="buttondefault" id="hover1">
                 <span class="spanbutton">Default</span>
             </p>
         </div>
