--- a/D002/index.html
+++ b/D002/index.html
@@ -30,7 +30,9 @@
     <main>
         <h1>Buttons</h1>
 
-        <div>
+
+        <!--1 Linha-->
+        <div class="boxdefaultleft">
             <!--Button Padrão-->
             <p class="textdefault">
                 &lt;Button /&gt;
@@ -48,6 +50,57 @@
                 <span class="spanbutton">Default</span>
             </p>
         </div>
+
+
+        <!--2 Linha-->
+        <div class="boxdefaultleft">
+            <p class="textdefault">
+                &lt;Button variant="outline"  /&gt;
+            </p>
+            <p class="buttondefault" id="bgwborblu">
+                <span class="spanbutton">Default</span>
+            </p>
+        </div>
+        <div class="divhoverdefault">
+            <p class="textdefault" id="texthover1">
+                &:hover , &:focus
+            </p>
+            <p class="buttondefault" id="colblue">
+                <span class="spanbutton">Default</span>
+            </p>
+        </div>
+
+
+        <!--3 Linha-->
+        <div class="boxdefaultleft">
+            <p class="textdefault">
+                &lt;Button variant="text" /&gt;
+            </p>
+            <p class="buttondefault" id="noborder">
+                <span class="spanbutton">Default</span>
+            </p>
+        </div>
+        <div class="divhoverdefault">
+            <p class="textdefault" id="texthover1">
+                &:hover , &:focus
+            </p>
+            <p class="buttondefault" id="noborderhover">
+                <span class="spanbutton">Default</span>
+            </p>
+        </div>
+
+        <!--4 Linha-->
+        <div class="boxdefaultleft">
+            <p class="textdefault">
+                &lt;Button disableShadow /&gt;
+            </p>
+            <p class="buttondefault" id="bgbluecolwhite">
+                <span class="spanbutton">Default</span>
+            </p>
+        </div>
+
+
+
     </main>
 </body>
 
