--- a/D002/index.html
+++ b/D002/index.html
@@ -8,6 +8,7 @@
     <title>Buttons</title>
     <link rel="shortcut icon" href="devchallenges.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -99,7 +100,71 @@
             </p>
         </div>
 
+        <!--5 Linha-->
+        <div class="boxdefaultleft2">
+            <!--Button Padrão-->
+            <p class="textdefault">
+                &lt;Button /&gt;
+            </p>
+            <p class="buttondefault" style="color:rgba(128, 128, 128, 0.637); font-weight: lighter;">
+                <span class="spanbutton">Default</span>
+            </p>
+        </div>
+        <div class="divhoverdefault">
+            <!--Button com hover Padrão-->
+            <p class="textdefault"  style="color: rgba(0, 0, 0, 0.781);">
+                &lt;Button variant="text" disable /&gt;
+            </p>
+            <p class="buttondefault" id="texthover5" style="color:rgba(128, 128, 128, 0.637); font-weight: lighter;">
+                <span class="spanbutton">Default</span>
+            </p>
+        </div>
 
+        <!--6 Linha-->
+        <div style="margin-top:80px;">
+            <!--Button Padrão-->
+            <p class="textdefault">
+                &lt;Button /&gt;
+            </p>
+            <p class="buttondefault" id="bgbluecolwhite3" >
+                <span class="material-symbols-outlined" style="font-size: 18px;">
+                    add_shopping_cart
+                    </span>
+                <span class="spanbutton" id="shoppingcar">Default</span>
+            </p>
+        </div>
+        <div class="divhoverdefault">
+            <!--Button com hover Padrão-->
+            <p class="textdefault" id="texthover1" >
+                &lt;Button endIcon="local_grocery_store" /&gt;
+            </p>
+            <p class="buttondefault" id="bgbluecolwhite3" style="width: 120px;">
+                <span class="material-symbols-outlined" style="font-size: 18px;" id="hovercar">
+                    add_shopping_cart
+                    </span>
+                <span class="spanbutton" id="shoppingcar" style="left:25%">Default</span>
+            </p>
+        </div>
+
+            <!--7 Linha-->
+        <div class="boxdefaultleft">
+            <!--Button Padrão-->
+            <p class="textdefault" >
+                &lt;Button size="sm"/&gt;
+            </p>
+            <p class="buttondefault" id="bgbluecolwhite">
+                <span class="spanbutton">Default</span>
+            </p>
+        </div>
+        <div class="divhoverdefault">
+            <!--Button com hover Padrão-->
+            <p class="textdefault" id="texthover1">
+                &:hover , &:focus
+            </p>
+            <p class="buttondefault" id="hover1">
+                <span class="spanbutton">Default</span>
+            </p>
+        </div>
 
     </main>
 </body>
