--- a/D001/index.html
+++ b/D001/index.html
@@ -10,7 +10,9 @@
   <link rel="stylesheet" href="desktop.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-  <title>Document</title>
+  <title>Gabrielle
+    Essence Eau
+    De Parfum</title>
 
 </head>
 
