--- a/D002/index.html
+++ b/D002/index.html
@@ -90,6 +90,7 @@
             </p>
         </div>
 
+        
         <!--4 Linha-->
         <div class="boxdefaultleft">
             <p class="textdefault">
@@ -99,6 +100,7 @@
                 <span class="spanbutton">Default</span>
             </p>
         </div>
+
 
         <!--5 Linha-->
         <div class="boxdefaultleft2">
@@ -120,13 +122,14 @@
             </p>
         </div>
 
+
         <!--6 Linha-->
         <div style="margin-top:80px;">
             <!--Button Padrão-->
             <p class="textdefault">
                 &lt;Button /&gt;
             </p>
-            <p class="buttondefault" id="bgbluecolwhite3" onclick="changelocationcar()">
+            <p class="buttondefault" id="bgbluecolwhite3">
                 <span class="material-symbols-outlined" style="font-size: 18px;">
                     add_shopping_cart
                     </span>
@@ -138,13 +141,15 @@
             <p class="textdefault" id="texthover1" >
                 &lt;Button endIcon="local_grocery_store" /&gt;
             </p>
-            <p class="buttondefault" id="" style="width: 120px;">
+            <p class="buttondefault" id="bgbluecolwhite2" style="width: 120px;">
                 <span class="material-symbols-outlined" style="font-size: 18px;" id="hovercar">
                     add_shopping_cart
                     </span>
-                <span class="spanbutton" id="shoppingcar" style="left:25%">Default</span>
+                <span class="spanbutton" id="shoppingcar2" style="left:25%">Default</span>
+
             </p>
         </div>
+
 
             <!--7 Linha-->
         <div class="boxdefaultleft">
@@ -152,7 +157,37 @@
             <p class="textdefault" >
                 &lt;Button size="sm"/&gt;
             </p>
-            <p class="buttondefault" id="bgbluecolwhite">
+            <p class="buttondefault" id="sizesm">
+                <span class="spanbutton" id="textsizesm">Default</span>
+            </p>
+        </div>
+        <div class="divhoverdefault">
+            <!--Button com hover Padrão-->
+            <p class="textdefault">
+                &lt;Button size="md"/&gt;
+            </p>
+            <p class="buttondefault" id="sizemd">
+                <span class="spanbutton">Default</span>
+            </p>
+        </div>
+        <div class="divhoverright">
+            <!--Button com hover Padrão-->
+            <p class="textdefault" >
+                &lt;Button size="lg"/&gt;
+            </p>
+            <p class="buttondefault" id="sizelg">
+                <span class="spanbutton" id="textsizelg">Default</span>
+            </p>
+        </div>
+
+
+         <!--8 Linha-->
+         <div class="boxdefaultleft">
+            <!--Button Padrão-->
+            <p class="textdefault">
+                &lt;Button /&gt;
+            </p>
+            <p class="buttondefault">
                 <span class="spanbutton">Default</span>
             </p>
         </div>
@@ -165,21 +200,9 @@
                 <span class="spanbutton">Default</span>
             </p>
         </div>
-
     </main>
 
-    <script>
-        var hovercar = document.querySelector("#hovercar")
 
-
-        function changelocationcar(){
-            alert("A")
-        }
-
-
-        //onmouseenter The event occurs when the pointer is moved onto an element
-
-    </script>
 </body>
 
 </html>
