javascript .style.left

--- a/D002/index.html
+++ b/D002/index.html
@@ -130,7 +130,7 @@
                 &lt;Button /&gt;
             </p>
             <p class="buttondefault" id="bgbluecolwhite3">
-                <span class="material-symbols-outlined" style="font-size: 18px;">
+                <span class="material-symbols-outlined" style="font-size: 18px;" >
                     add_shopping_cart
                     </span>
                 <span class="spanbutton" id="shoppingcar">Default</span>
@@ -202,7 +202,7 @@
         </div>
     </main>
 
-
+<script src="scrip.js"></script>
 </body>
 
 </html>
