--- a/D002/index.html
+++ b/D002/index.html
@@ -1,208 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buttons</title>
-    <link rel="shortcut icon" href="devchallenges.png" type="image/x-icon">
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
-
 <body>
-
-    <nav>
-        <p id="header">
-            <span>Dev</span>challenges.io
-        </p>
-
-        <p>
-            Colors <br>
-            Typography <br>
-            Spaces <br>
-            <span id="inp">Buttons</span> <br>
-            Inputs <br>
-            Grid
-        </p>
-    </nav>
-
-    <main>
-        <h1>Buttons</h1>
-
-
-        <!--1 Linha-->
-        <div class="boxdefaultleft">
-            <!--Button Padrão-->
-            <p class="textdefault">
-                &lt;Button /&gt;
-            </p>
-            <p class="buttondefault">
-                <span class="spanbutton">Default</span>
-            </p>
-        </div>
-        <div class="divhoverdefault">
-            <!--Button com hover Padrão-->
-            <p class="textdefault" id="texthover1">
-                &:hover , &:focus
-            </p>
-            <p class="buttondefault" id="hover1">
-                <span class="spanbutton">Default</span>
-            </p>
-        </div>
-
-
-        <!--2 Linha-->
-        <div class="boxdefaultleft">
-            <p class="textdefault">
-                &lt;Button variant="outline"  /&gt;
-            </p>
-            <p class="buttondefault" id="bgwborblu">
-                <span class="spanbutton">Default</span>
-            </p>
-        </div>
-        <div class="divhoverdefault">
-            <p class="textdefault" id="texthover1">
-                &:hover , &:focus
-            </p>
-            <p class="buttondefault" id="colblue">
-                <span class="spanbutton">Default</span>
-            </p>
-        </div>
-
-
-        <!--3 Linha-->
-        <div class="boxdefaultleft">
-            <p class="textdefault">
-                &lt;Button variant="text" /&gt;
-            </p>
-            <p class="buttondefault" id="noborder">
-                <span class="spanbutton">Default</span>
-            </p>
-        </div>
-        <div class="divhoverdefault">
-            <p class="textdefault" id="texthover1">
-                &:hover , &:focus
-            </p>
-            <p class="buttondefault" id="noborderhover">
-                <span class="spanbutton">Default</span>
-            </p>
-        </div>
-
-        
-        <!--4 Linha-->
-        <div class="boxdefaultleft">
-            <p class="textdefault">
-                &lt;Button disableShadow /&gt;
-            </p>
-            <p class="buttondefault" id="bgbluecolwhite">
-                <span class="spanbutton">Default</span>
-            </p>
-        </div>
-
-
-        <!--5 Linha-->
-        <div class="boxdefaultleft2">
-            <!--Button Padrão-->
-            <p class="textdefault">
-                &lt;Button /&gt;
-            </p>
-            <p class="buttondefault" style="color:rgba(128, 128, 128, 0.637); font-weight: lighter;">
-                <span class="spanbutton">Disabled</span>
-            </p>
-        </div>
-        <div class="divhoverdefault">
-            <!--Button com hover Padrão-->
-            <p class="textdefault"  style="color: rgba(0, 0, 0, 0.781);">
-                &lt;Button variant="text" disable /&gt;
-            </p>
-            <p class="buttondefault" id="texthover5" style="color:rgba(128, 128, 128, 0.637); font-weight: lighter;">
-                <span class="spanbutton">Disabled</span>
-            </p>
-        </div>
-
-
-        <!--6 Linha-->
-        <div style="margin-top:80px;">
-            <!--Button Padrão-->
-            <p class="textdefault">
-                &lt;Button /&gt;
-            </p>
-            <p class="buttondefault" id="bgbluecolwhite3">
-                <span class="material-symbols-outlined" style="font-size: 18px;" >
-                    add_shopping_cart
-                    </span>
-                <span class="spanbutton" id="shoppingcar">Default</span>
-            </p>
-        </div>
-        <div class="divhoverdefault">
-            <!--Button com hover Padrão-->
-            <p class="textdefault" id="texthover1" >
-                &lt;Button endIcon="local_grocery_store" /&gt;
-            </p>
-            <p class="buttondefault" id="bgbluecolwhite2" style="width: 120px;">
-                <span class="material-symbols-outlined" style="font-size: 18px;" id="hovercar">
-                    add_shopping_cart
-                    </span>
-                <span class="spanbutton" id="shoppingcar2" style="left:25%">Default</span>
-
-            </p>
-        </div>
-
-
-            <!--7 Linha-->
-        <div class="boxdefaultleft">
-            <!--Button Padrão-->
-            <p class="textdefault" >
-                &lt;Button size="sm"/&gt;
-            </p>
-            <p class="buttondefault" id="sizesm">
-                <span class="spanbutton" id="textsizesm">Default</span>
-            </p>
-        </div>
-        <div class="divhoverdefault">
-            <!--Button com hover Padrão-->
-            <p class="textdefault">
-                &lt;Button size="md"/&gt;
-            </p>
-            <p class="buttondefault" id="sizemd">
-                <span class="spanbutton">Default</span>
-            </p>
-        </div>
-        <div class="divhoverright">
-            <!--Button com hover Padrão-->
-            <p class="textdefault" >
-                &lt;Button size="lg"/&gt;
-            </p>
-            <p class="buttondefault" id="sizelg">
-                <span class="spanbutton" id="textsizelg">Default</span>
-            </p>
-        </div>
-
-
-         <!--8 Linha-->
-         <div class="boxdefaultleft">
-            <!--Button Padrão-->
-            <p class="textdefault">
-                &lt;Button /&gt;
-            </p>
-            <p class="buttondefault">
-                <span class="spanbutton">Default</span>
-            </p>
-        </div>
-        <div class="divhoverdefault">
-            <!--Button com hover Padrão-->
-            <p class="textdefault" id="texthover1">
-                &:hover , &:focus
-            </p>
-            <p class="buttondefault" id="hover1">
-                <span class="spanbutton">Default</span>
-            </p>
-        </div>
-    </main>
-
-<script src="scrip.js"></script>
+    
 </body>
-
 </html>
