--- a/D003/index.html
+++ b/D003/index.html
@@ -5,9 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
 </head>
 <body>
-    
+    <section>
+        <picture>
+        <img src="images/icon-star.svg" alt="img Star">
+        </picture>
+        
+        <h2>
+            How did we do?
+        </h2>
+        <p id="lorem">
+            Please let us know we did with your support request. All feedback is appreciated to help us improve our offering!
+        </p>
+
+        <p>
+            1
+        </p>
+        <p>
+            2
+        </p>
+        <p>
+            3
+        </p>
+        <p>
+            4
+        </p>
+        <p>
+            5
+        </p>
+        <p>submit</p>
+    </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
