--- a/D003/index.html
+++ b/D003/index.html
@@ -20,25 +20,25 @@
             How did we do?
         </h2>
         <p id="lorem">
-            Please let us know we did with your support request. All feedback is appreciated to help us improve our offering!
+            Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!
         </p>
 
-        <p>
-            1
+        <p class="buttonnumber">
+            <span class="vertical">1</span>
         </p>
-        <p>
-            2
+        <p class="buttonnumber left">
+            <span class="vertical">2</span>
         </p>
-        <p>
-            3
+        <p class="buttonnumber left">
+            <span class="vertical">3</span>
         </p>
-        <p>
-            4
+        <p class="buttonnumber left">
+            <span class="vertical">4</span>
         </p>
-        <p>
-            5
+        <p class="buttonnumber left">
+            <span class="vertical">5</span>
         </p>
-        <p>submit</p>
+        <p id="submit"><span id="ssub">SUBMIT</span></p>
     </section>
 
     <script src="script.js"></script>
