--- a/D003/thxstate.html
+++ b/D003/thxstate.html
@@ -7,8 +7,6 @@
     <title>Document</title>
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet">
 </head>
 <body>
     <section>
@@ -23,27 +21,22 @@
             Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!
         </p>
 
-        <p class="buttonnumber" id="b1" onclick="selbutton(1)">
-            <span class="vertical"  >1</span>
+        <p class="buttonnumber">
+            <span class="vertical">1</span>
         </p>
-        <p class="buttonnumber left" id="b2"  onclick="selbutton(2)">
-            <span class="vertical" >2</span>
+        <p class="buttonnumber left">
+            <span class="vertical">2</span>
         </p>
-        <p class="buttonnumber left"  id="b3" onclick="selbutton(3)">
-            <span class="vertical" >3</span>
+        <p class="buttonnumber left">
+            <span class="vertical">3</span>
         </p>
-        <p class="buttonnumber left" id="b4"  onclick="selbutton(4)">
-            <span class="vertical" >4</span>
+        <p class="buttonnumber left">
+            <span class="vertical">4</span>
         </p>
-        <p class="buttonnumber left" id="b5"  onclick="selbutton(5)">
-            <span class="vertical" >5</span>
+        <p class="buttonnumber left">
+            <span class="vertical">5</span>
         </p>
-
-        <p id="submit"  onclick="sub()">
-            <span id="ssub">SUBMIT</span>
-        </p>
+        <p id="submit"><span id="ssub">SUBMIT</span></p>
     </section>
-
-    <script src="script.js"></script>
 </body>
 </html>
