att js css and html to 'thx u state'

--- a/D003/index.html
+++ b/D003/index.html
@@ -11,36 +11,52 @@
     rel="stylesheet">
 </head>
 <body>
-    <section>
+    <section  id="how-did-we-do">
         <picture>
-        <img src="images/icon-star.svg" alt="img Star">
+        <img src="images/icon-star.svg" alt="img Star" id="star">
         </picture>
         
+            <h2>
+                How did we do?
+            </h2>
+            <p id="lorem">
+                Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!
+            </p>
+            <p class="buttonnumber" id="b1" onclick="selbutton(1)">
+                <span class="vertical"  >1</span>
+            </p>
+            <p class="buttonnumber left" id="b2"  onclick="selbutton(2)">
+                <span class="vertical" >2</span>
+            </p>
+            <p class="buttonnumber left"  id="b3" onclick="selbutton(3)">
+                <span class="vertical" >3</span>
+            </p>
+            <p class="buttonnumber left" id="b4"  onclick="selbutton(4)">
+                <span class="vertical" >4</span>
+            </p>
+            <p class="buttonnumber left" id="b5"  onclick="selbutton(5)">
+                <span class="vertical" >5</span>
+            </p>
+            <p id="submit"  onclick="sub()">
+                <span id="ssub">SUBMIT</span>
+            </p>
+    </section>
+
+    <section id="thank-you-state">
+        <picture>
+            <img src="images/illustration-thank-you.svg" alt="img thanks" id="imgthanks">
+        </picture>
+
+        <p id="result">
+            You selected out of 5
+        </p>
+
         <h2>
-            How did we do?
+            Thank you!
         </h2>
-        <p id="lorem">
-            Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!
-        </p>
 
-        <p class="buttonnumber" id="b1" onclick="selbutton(1)">
-            <span class="vertical"  >1</span>
-        </p>
-        <p class="buttonnumber left" id="b2"  onclick="selbutton(2)">
-            <span class="vertical" >2</span>
-        </p>
-        <p class="buttonnumber left"  id="b3" onclick="selbutton(3)">
-            <span class="vertical" >3</span>
-        </p>
-        <p class="buttonnumber left" id="b4"  onclick="selbutton(4)">
-            <span class="vertical" >4</span>
-        </p>
-        <p class="buttonnumber left" id="b5"  onclick="selbutton(5)">
-            <span class="vertical" >5</span>
-        </p>
-
-        <p id="submit"  onclick="sub()">
-            <span id="ssub">SUBMIT</span>
+        <p>
+                We appreciate you taking the time to give a rating. If you ever need more support, don't hesitate to get in touch!
         </p>
     </section>
 
