--- a/D003/index.html
+++ b/D003/index.html
@@ -51,11 +51,11 @@
             You selected out of 5
         </p>
 
-        <h2>
+        <h2 id="thx">
             Thank you!
         </h2>
 
-        <p>
+        <p id="appreciate">
                 We appreciate you taking the time to give a rating. If you ever need more support, don't hesitate to get in touch!
         </p>
     </section>
