--- a/D004/index.html
+++ b/D004/index.html
@@ -9,16 +9,20 @@
 </head>
 <body>
     <main>
-    <header>
-        Try it free 7 days then $20/mo. thereafter
+    <header class="right box">
+        <span id="tryheader">Try it free 7 days</span> then $20/mo. thereafter
     </header>
-    <section>
+    <section class="right box">
         <form method="post" autocomplete="off">
             <input type="text" name="" id="" placeholder="First Name" required>
-            <!--input2-->
-            <!--input3-->
-            <!--input4-->
-            <!--submit-->
+
+            <input type="text" name="" id="" placeholder="First Name" required>
+
+            <input type="text" name="" id="" placeholder="First Name" required>
+
+            <input type="text" name="" id="" placeholder="First Name" required>
+            
+            <input type="submit" value="">
         </form>
 
         <p>By clicking the button, you are agreeing to our <span>Terms and Services</span></p>
