--- a/D004/index.html
+++ b/D004/index.html
@@ -16,13 +16,13 @@
         <form method="post" autocomplete="off">
             <input type="text" name="" id="" placeholder="First Name" required>
 
-            <input type="text" name="" id="" placeholder="First Name" required>
+            <input type="text" name="" id="" placeholder="Last Name" required>
 
-            <input type="text" name="" id="" placeholder="First Name" required>
+            <input type="email" name="" id="" placeholder="Email Address" required>
 
-            <input type="text" name="" id="" placeholder="First Name" required>
+            <input type="password" name="" id="" placeholder="Password" required>
             
-            <input type="submit" value="">
+            <input type="submit" value="CLAIM YOUR FREE TRIAL">
         </form>
 
         <p>By clicking the button, you are agreeing to our <span>Terms and Services</span></p>
