--- a/D004/index.html
+++ b/D004/index.html
@@ -9,23 +9,24 @@
 </head>
 <body>
     <main>
-    <header class="right box">
+    <header class="right">                      <!--Dar um espaço forçado aquis-->
         <span id="tryheader">Try it free 7 days</span> then $20/mo. thereafter
     </header>
-    <section class="right box">
+    <section class="right formbox">
         <form method="post" autocomplete="off">
-            <input type="text" name="" id="" placeholder="First Name" required>
+            <input class="input" type="text" name="" id="" placeholder="First Name" required>
 
-            <input type="text" name="" id="" placeholder="Last Name" required>
+            <input class="input" type="text" name="" id="" placeholder="Last Name" required>
 
-            <input type="email" name="" id="" placeholder="Email Address" required>
+            <input class="input" type="email" name="" id="" placeholder="Email Address" required>
 
-            <input type="password" name="" id="" placeholder="Password" required>
+            <input class="input" type="password" name="" id="" placeholder="Password" required>
             
-            <input type="submit" value="CLAIM YOUR FREE TRIAL">
+            <input class="button" type="submit" value="CLAIM YOUR FREE TRIAL">
+            <p>By clicking the button, you are agreeing to our <span>Terms and Services</span></p>
         </form>
 
-        <p>By clicking the button, you are agreeing to our <span>Terms and Services</span></p>
+        
     </section>
 
 
