--- a/D004-signUp-form/index.html
+++ b/D004-signUp-form/index.html
@@ -18,7 +18,7 @@
         <section>
 
             <header class="right">                      <!--Dar um espaço forçado aquis-->
-                <span id="tryheader">Try it free 7 days</span> then $20/mo. thereafter
+                <span id="tryheader">Try it free 7 days &nbsp;</span> then $20/mo. thereafter
             </header>
             <section class="right formbox">
                 <form autocomplete="off">
