--- a/D005/index.html
+++ b/D005/index.html
@@ -10,8 +10,42 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>
-    teste
-  </h1>
+  <header>
+    <picture>
+      <img src="images/logo.svg" alt="">
+    </picture>
+
+    <div class="score">
+      SCORE
+      <p>0</p>
+    </div>
+  </header>
+
+  <section>
+    <div class="colorborder">
+      <div class="bgwhite">
+        <img src="images/icon-paper.svg" alt="">
+      </div>
+    </div>
+
+    <div class="colorborder">
+      <div class="bgwhite">
+        <img src="images/icon-rock.svg" alt="">
+      </div>
+    </div>
+
+    <div class="colorborder">
+      <div class="bgwhite">
+        <img src="images/icon-scissors.svg" alt="">
+      </div>
+    </div>
+
+  </section>
+
+  <section class="rules">
+    <p>
+      RULES
+    </p>
+  </section>
 </body>
 </html>
