Organizei as pastas, colocando uma pasta estilos em cada projeto

--- a/D003-PaginaAvaliacao/index.html
+++ b/D003-PaginaAvaliacao/index.html
@@ -7,8 +7,8 @@
     <title>Interactive Rating Component
     </title>
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="desktop.css">
+    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/desktop.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
 </head>
