--- a/D001-PaginaAndroid/index.html
+++ b/D001-PaginaAndroid/index.html
@@ -88,6 +88,6 @@
         </article>
     </main>
 
-    <footer>Site criado por <a href="#" target="_blank">José Cláudio</a> para <a href="#" target="_blank">Aprender</a>.</footer>
+    <footer>Site criado por <a href="https://github.com/JoseClaudiolima" target="_blank">José Cláudio</a>.</footer>
 </body>
 </html>
