Update D001 and D002, add a footer

--- a/D002-PaginaPerfumeUnico/index.html
+++ b/D002-PaginaPerfumeUnico/index.html
@@ -73,6 +73,8 @@
     </div>
   </section>
 
+  <footer>Site desenvolvido por <a href="https://github.com/JoseClaudiolima" target="_blank">José Cláudio</a>.</footer>
+  
 </body>
 
 </html>
