Add a footer to D003

--- a/D003-PaginaAvaliacao/index.html
+++ b/D003-PaginaAvaliacao/index.html
@@ -62,6 +62,8 @@
         </p>
     </section>
 
+    <footer>Desenvolvido por <a href="https://github.com/JoseClaudiolima" target="_blank">José Cláudio</a>.</footer>
+
     <script src="script.js"></script>
 </body>
 </html>
