add footer to D004

--- a/D004-signUp-form/index.html
+++ b/D004-signUp-form/index.html
@@ -41,7 +41,10 @@
         </section>
 
     
+    <footer>Desenvolvido por <a href="https://github.com/JoseClaudiolima">José Cláudio</a>.</footer>
 
     </main>
+
+
 </body>
 </html>
